# Simple-News-site

./: README.md  pyproject.toml
soc_net/: admin.py  forms.py  models.py  urls.py  views.py
soc_net/migrations/: 0001_initial.py  0002_auto_20190817_1719.py  0003_remove_comments_moderation.py  0004_auto_20190818_1222.py  0005_auto_20190818_1311.py  0006_auto_20190818_1322.py  0007_comment_moderation.py  0008_auto_20190818_1328.py  0009_auto_20190818_1603.py  0010_comment_parent.py  0011_comment_active.py  0012_auto_20190820_1225.py  0013_auto_20190820_1259.py  0014_remove_comment_approved_comment.py  0015_delete_comment.py  0016_auto_20190829_1413.py  0017_post_publish.py  0018_auto_20190829_1453.py  0019_auto_20190829_1457.py  0020_remove_post_publish.py  0021_auto_20190903_1145.py  0022_auto_20190903_1148.py  0023_auto_20190903_1154.py  0024_auto_20190903_1509.py
social/: settings.py  urls.py
static/css/: base.css
templates/: add_comment_reply.html  add_comment_to_post.html  base.html  home.html  post_detail.html
templates/account/: login.html  signup.html
users/: adapter.py  admin.py  forms.py  models.py  signupform.py
users/migrations/: 0001_initial.py  0002_auto_20190816_1806.py  0003_auto_20190823_1419.py
